2010-04-20  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler.cpp (reachableAddressInRGtw::checkReachableIPAddress):
	fixes #1410 "Problem with route for 4.0.0-b2809". Compiler did
	not allow vlan subinterface as a gateway in a routing rule.

2010-04-08  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expand_interface): fixes #1394 using
	existing virtual functions that expand multiple addresses to
	expand cluster interfaces. Renamed function _expandAddr to
	_expand_addr, added parameter bool expand_cluster_interfaces_fully
	to _expand_addr, _expand_addr_recursive and _expand_interface

2010-03-29  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (expandGroupsInItf::processNext): added rule
	processor expandGroupsInItf and moved expandGroupsInSrv from
	compiler for iptables. See fwbuilder:ticket:1374 "Rule with group
	of interfaces in the "Interface" column is not compiled the same
	as when the same interfaces are placed there without group"

	* RuleElement.cpp (RuleElementItf::checkItfChildOfThisFw): fixed
	fwbuilder:ticket:1372 group is not allowed in the "Interface"
	column. Group of interfaces should be allowed in the "Interface"
	rule element provided all group members are children of the same
	firewall.

2010-03-23  Vadim Kurland  <vadim@vk.crocodile.org>

	* inet_net_pton.c (inet_cidr_pton_ipv4): fixed fwbuilder:ticket:1328
	"IPv4 dialog takes incorrect ip addresses". Function inet_cidr_pton_ipv4
	translated incomplete ipv4 addresses such as "1.0.0" incorrectly. The
	last octet in the result had random value because of use of unitialized
	memory.

2010-03-18  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (replaceFailoverInterfaceInRE::processNext): fixes
	fwbuilder:ticket:1344 "PF script generated or the cluster uses
	carp interfaces".

2010-03-16  vadim  <vadim@vk.crocodile.org>

	* XMLTools.cpp (XMLTools::loadFile): passing error code returned
	by access() for better diagnostics. See fwbuilder:ticket:1334
