@@ -24,7 +24,7 @@ VERSION="4.0.0"
 #  for more details see libtool manual, chapter "Libtool's versioning system"
 
 LIBFWBUILDER_CURRENT=9
-LIBFWBUILDER_REVISION=0
+LIBFWBUILDER_REVISION=1
 LIBFWBUILDER_AGE=0
 
 LIBFWBUILDER_SO_VERSION=${LIBFWBUILDER_CURRENT}:${LIBFWBUILDER_REVISION}:${LIBFWBUILDER_AGE}
